--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -40,7 +40,7 @@ jobs:
       run: |
         conan profile new default --detect
         conan profile update settings.compiler.libcxx=libstdc++11 default
-        conan install . --build=fmt --build=spdlog --build=glfw --build=imgui
+        conan install . --build=missing
 
     - name: Sonar Build Wrapper
       shell: bash
