--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,7 +27,7 @@ jobs:
       # The CMake binaries on the Github Actions machines are (as of this writing) 3.12
       run: |
         sudo apt-get update
-        sudo apt-get install -y build-essential git cmake curl
+        sudo apt-get install -y build-essential git cmake curl libgl-dev
         curl -L -O https://dl.bintray.com/conan/installers/conan-ubuntu-64_1_32_1.deb
         sudo dpkg -i conan-ubuntu-64_1_32_1.deb
 
