--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,7 +3,7 @@ sonar.organization=twelvechairssoftware-1
 sonar.host.url=https://sonarcloud.io
 
 # This is the name and version displayed in the SonarCloud UI.
-sonar.projectName=zxpaint
+sonar.projectName=GLFW-ImGui-OpenGL
 #sonar.projectVersion=1.0
 
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
