Refactor for common functions

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,8 +10,12 @@ include(conanbuildinfo.cmake)
 conan_basic_setup()
 
 add_executable(untitled
+        src/common.h
+        src/common.cpp
+        src/main.h
         src/main.cpp
-        src/imgui.cpp)
+        )
+
 #include/imgui_impl_opengl3.cpp
 #include/imgui_impl_glfw.cpp
 target_link_libraries(untitled PRIVATE ${CONAN_LIBS})
