--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,22 +1,50 @@
-cmake_minimum_required(VERSION 3.17)
+cmake_minimum_required(VERSION 3.20)
 
 set(PROJECT_NAME "opengl")
-set(CMAKE_CONFIGURATION_TYPES "Debug;Release;MinSizeRel" CACHE STRING "" FORCE)
-list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
-
-project(${PROJECT_NAME})
 set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-include(conanbuildinfo.cmake)
-conan_basic_setup()
+project(${PROJECT_NAME} LANGUAGES CXX)
+
+list(APPEND CMAKE_MODULE_PATH ${CMAKE_BINARY_DIR})
+list(APPEND CMAKE_PREFIX_PATH ${CMAKE_BINARY_DIR})
+
+#### Set up Conan and build dependencies #### https://github.com/conan-io/cmake-conan ##################################
+if(NOT EXISTS "${CMAKE_BINARY_DIR}/conan.cmake")
+    message(STATUS "Downloading conan.cmake from https://github.com/conan-io/cmake-conan")
+    file(DOWNLOAD "https://raw.githubusercontent.com/conan-io/cmake-conan/v0.16.1/conan.cmake"
+            "${CMAKE_BINARY_DIR}/conan.cmake"
+            EXPECTED_HASH SHA256=396e16d0f5eabdc6a14afddbcfff62a54a7ee75c6da23f32f7a31bc85db23484
+            TLS_VERIFY ON)
+endif()
+
+include(${CMAKE_BINARY_DIR}/conan.cmake)
+conan_cmake_configure(REQUIRES spdlog/1.9.2
+        glfw/3.3.4
+        glew/2.2.0
+        glm/0.9.9.8
+        imgui/1.84.2
+        GENERATORS cmake cmake_paths cmake_find_package)
+conan_cmake_autodetect(settings)
+conan_cmake_install(PATH_OR_REFERENCE .
+        BUILD missing
+        REMOTE conancenter
+        SETTINGS ${settings})
+########################################################################################################################
+
+find_package(spdlog REQUIRED)
+find_package(glfw3 REQUIRED)
+find_package(glew REQUIRED)
+find_package(glm REQUIRED)
+find_package(imgui REQUIRED)
 
 file(GLOB H_FILES "src/*.h")
 file(GLOB CPP_FILES "src/*.cpp")
 file(GLOB GLSL_FILES "glsl/*.glsl")
+file(GLOB INCL_FILES "include/*.*")
+
 file(COPY ${GLSL_FILES} DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/bin)
 
-add_executable(${PROJECT_NAME} ${H_FILES} ${CPP_FILES})
+add_executable(${PROJECT_NAME} ${H_FILES} ${CPP_FILES} ${INCL_FILES})
 
-#include/imgui_impl_opengl3.cpp
-#include/imgui_impl_glfw.cpp
-target_link_libraries(${PROJECT_NAME} PRIVATE ${CONAN_LIBS})
+target_link_libraries(${PROJECT_NAME} PRIVATE spdlog::spdlog imgui::imgui glfw::glfw GLEW::GLEW glm::glm)
