--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,16 +21,8 @@ jobs:
       shell: bash
       run: |
         sudo apt-get update
-        sudo apt-get install -y build-essential git cmake curl libgl-dev libglu1-mesa-dev
-        curl -L -O https://dl.bintray.com/conan/installers/conan-ubuntu-64_1_32_1.deb
-        sudo dpkg -i conan-ubuntu-64_1_32_1.deb
-
-    - name: Libs
-      shell: bash
-      run: |
-        conan profile new default --detect
-        conan profile update settings.compiler.libcxx=libstdc++11 default
-        conan install . --build=missing
+        sudo apt-get install -y build-essential git pip cmake curl
+        pip install conan
 
     - name: Sonar Build Wrapper
       shell: bash
