--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,7 +21,7 @@ jobs:
       shell: bash
       run: |
         sudo apt-get update
-        sudo apt-get install -y build-essential git pip cmake curl
+        sudo apt-get install -y build-essential git pip cmake curl libgl-dev libglu1-mesa-dev
         pip install conan
 
     - name: Sonar Build Wrapper
