--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,7 +24,7 @@ jobs:
         sudo wget -qO /etc/apt/sources.list.d/lunarg-vulkan-focal.list http://packages.lunarg.com/vulkan/lunarg-vulkan-focal.list
 
         sudo apt-get update
-        sudo apt-get install -y build-essential git pip cmake curl vulkan-sdk libgl-dev libglu1-mesa-dev
+        sudo apt-get install -y build-essential git pip cmake curl vulkan-sdk libgl-dev libglu1-mesa-dev libegl-dev
         pip install conan
 
     - name: Sonar Build Wrapper
