--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -7,9 +7,9 @@ sonar.projectName=GLFW-ImGui-OpenGL
 #sonar.projectVersion=1.0
 
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
-sonar.sources=src/
+#sonar.sources=src/
 
-sonar.cfamily.threads=1
+sonar.cfamily.threads=4
 sonar.cfamily.cache.enabled=false
 
 # Encoding of the source code. Default is default system encoding
