--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,13 +25,13 @@ if(NOT EXISTS "${CMAKE_BINARY_DIR}/conan.cmake")
 endif()
 
 include(${CMAKE_BINARY_DIR}/conan.cmake)
-conan_cmake_configure(REQUIRES cmake/3.21.3
-        glfw/3.3.4
+conan_cmake_configure(REQUIRES
+        glfw/3.3.6
         glew/2.2.0
-        imgui/1.84.2
+        imgui/1.86
         glm/0.9.9.8
         tinyobjloader/1.0.6
-        stb/cci.20210713
+        stb/cci.20210910
         spdlog/1.9.2
         GENERATORS cmake cmake_paths cmake_find_package)
 conan_cmake_autodetect(settings)
