--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -10,9 +10,9 @@ sonar.projectName=GLFW-ImGui-OpenGL
 #sonar.sources=src/
 
 sonar.cfamily.threads=4
-sonar.cfamily.cache.enabled=false
+#sonar.cfamily.cache.enabled=false
 
 # Encoding of the source code. Default is default system encoding
 sonar.sourceEncoding=UTF-8
 
-sonar.cfamily.build-wrapper-output=bw-outputs
+#sonar.cfamily.build-wrapper-output=bw-outputs
